.apex/src/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AccountId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TotalPrice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalProductCount__c</fullName>
        <label>TotalProductCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Order</label>
    <nameField>
        <label>Order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>